--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 }
 body{
   overflow-x: hidden;
-  background: #000235;
+  /* background: #000235; */
   /* font-family: 'Montserrat', sans-serif; */
 }
 a{
