--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+/* headings */
+@import url('http://fonts.cdnfonts.com/css/clash-display');
+/* dummy text */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -7,7 +12,7 @@
 body{
   overflow-x: hidden;
   /* background: #000235; */
-  /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Clash Display', sans-serif;
 }
 a{
 text-decoration: none;
